syntax = "proto3";

package docker.whoami.service;

option go_package = "internal/whoami;whoami";

message WhoAmIRequest {}

message WhoAmIResponse {
  string message = 1;
}

service WhoAmI {
  rpc GetWhoAmI(WhoAmIRequest) returns (WhoAmIResponse);
}